--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+
     package="com.example.imte_mobile">
+
+<uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="imte_mobile"
         android:name="${applicationName}"
@@ -31,4 +35,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+           <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
