--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   video_player: ^2.4.5
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.1.4
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   chewie: ^1.3.4
+  http: ^0.13.4
+  shared_preferences: ^2.0.15  
+  tuple: ^2.0.0
+  encrypt: ^5.0.1
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
