--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
   shared_preferences: ^2.0.15  
   dropdown_textfield: ^1.0.3
   image_picker: ^0.8.5+3
-  
+  barcode_widget: ^2.0.2
+  intl: ^0.17.0
+
+
   flutter:
     sdk: flutter
      
@@ -42,6 +45,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.4
+  flutter_barcode_scanner: ^2.0.0
 
 
 dev_dependencies:
@@ -52,14 +56,18 @@ dev_dependencies:
   encrypt: ^5.0.1
   hex: ^0.2.0
   floating_bottom_bar: ^0.0.1
+  flutter_launcher_icons: ^0.9.2
 
-
+flutter_icons : 
+  android : true
+  ios : true
+  image_path: "assets/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # rules and activating additional ones.\
   flutter_lints: ^2.0.0 
 
 # For information on the generic Dart part of this file, see the
@@ -78,6 +86,7 @@ flutter:
     - assets/image/
     - assets/video/
 
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
