--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.17.5 <3.0.0"
@@ -27,42 +27,40 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  sticky_headers: "^0.3.0"
-  google_fonts: ^3.0.1
-  video_player: ^2.4.5
-  shared_preferences: ^2.0.15  
-  dropdown_textfield: ^1.0.3
-  image_picker: ^0.8.5+3
   barcode_widget: ^2.0.2
-  intl: ^0.17.0
-
-
+  bloc: ^8.1.0
+  cupertino_icons: ^1.0.2
+  dio: ^4.0.6
+  dropdown_textfield: ^1.0.3
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_localizations: # Add this line
-    sdk: flutter         # Add this line  
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  url_launcher: ^6.1.4
   flutter_barcode_scanner: ^2.0.0
+  flutter_bloc: ^8.1.1
   flutter_html: ^3.0.0-alpha.5
-
+  flutter_localizations:
+    sdk: flutter
+  google_fonts: ^3.0.1
+  image_picker: ^0.8.5+3
+  intl: ^0.17.0
+  shared_preferences: ^2.0.15
+  sticky_headers: ^0.3.0
+  url_launcher: ^6.1.4
+  video_player: ^2.4.5
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  http: ^0.13.4
-  tuple: ^2.0.0
   encrypt: ^5.0.1
-  hex: ^0.2.0
   floating_bottom_bar: ^0.0.1
   flutter_launcher_icons: ^0.9.2
+  flutter_test:
+    sdk: flutter
+  hex: ^0.2.0
+  http: ^0.13.4
+  tuple: ^2.0.0
 
-flutter_icons : 
-  android : true
-  ios : true
+flutter_icons:
+  android: true
+  ios: true
   image_path: "assets/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -70,11 +68,10 @@ flutter_icons :
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.\
-  flutter_lints: ^2.0.0 
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -87,20 +84,16 @@ flutter:
   assets:
     - assets/image/
     - assets/video/
-
-  
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
+    # An image asset can refer to one or more resolution-specific "variants", see
+    # https://flutter.dev/assets-and-images/#resolution-aware
+    # For details regarding adding assets from package dependencies, see
+    # https://flutter.dev/assets-and-images/#from-packages
+    # To add custom fonts to your application, add a fonts section here,
+    # in this "flutter" section. Each entry in this list should have a
+    # "family" key with the font family name, and a "fonts" key with a
+    # list giving the asset and other descriptors for the font. For
+    # example:
+    # fonts:
     # - family: Schyler
     #   fonts:
     #     - asset: fonts/Schyler-Regular.ttf
@@ -114,6 +107,5 @@ flutter:
     # - family : Gotham
     #   fonts:
     #     - asset: fonts/Gotham-Black.ttf
-        
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
