--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@ xmlns:tools="http://schemas.android.com/tools"
 
     package="com.example.imte_mobile">
 
+<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="31" />
+
 <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
