--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Aug 24 16:28:40 ICT 2022
-sdk.dir=C\:\\Users\\CITY1\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\yafhe\\AppData\\Local\\Android\\Sdk
