--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   bloc: ^8.1.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
-  dropdown_textfield: ^1.0.3
+  dropdown_textfield: ^1.0.7
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -45,13 +45,14 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.15
   sticky_headers: ^0.3.0
+  string_extensions: ^0.6.6
   url_launcher: ^6.1.4
   video_player: ^2.4.5
 
 dev_dependencies:
   encrypt: ^5.0.1
   floating_bottom_bar: ^0.0.1
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.11.0
   flutter_test:
     sdk: flutter
   hex: ^0.2.0
