--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@ xmlns:tools="http://schemas.android.com/tools"
     <uses-permission android:name="android.permission.STORAGE" />
    <application
         android:usesCleartextTraffic="true"
-        android:label="IMTE Mobile"
+        android:label="IMTE.Edu "
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        <activity
+        <activity   
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
