--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,12 +27,12 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     signingConfigs {
-        // config {
-        //     storePassword 'smistudent'
-        //     keyAlias 'imte'
-        //     keyPassword 'smistudent'
-        //     storeFile file('C:\\Users\\CITY1\\Documents\\yafet\\imte_mobile\\keystore_imte.jks')
-        // }
+        config {
+            storePassword 'smistudent'
+            keyAlias 'imte'
+            keyPassword 'smistudent'
+            storeFile file('C:\\Users\\CITY1\\Documents\\yafet\\imte_mobile\\keystore_imte.jks')
+        }
     }
     compileSdkVersion 31
     // compileSdkVersion flutter.compileSdkVersion
