--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.5+3
   intl: ^0.17.0
   shared_preferences: ^2.0.15
+  skeletons: ^0.0.3
   sticky_headers: ^0.3.0
   string_extensions: ^0.6.6
   url_launcher: ^6.1.4
